--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
